[tool.poetry]
name = "private-pypi"
version = "0.1.1"
description = "A private PyPI server powered by backend(s) like GitHub."
license = "MIT"
authors = ["huntzhan <huntzhan.dev@gmail.com>"]
readme = "README.md"
repository = "https://github.com/python-best-practices/private-pypi"
keywords = ["private", "pypi", "github", "packaging", "dependency"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
# TODO: Will support all python versions in the future
# by using https://github.com/python-best-practices/wheel-compiler
python = "^3.7"
requests = "^2.22.0"
PyGithub = "^1.45"
toml = "^0.10.0"
filelock = "^3.0.12"
shortuuid = "^0.5.0"
fire = "^0.2.1"
Jinja2 = "^2.11.1"
flask = "^1.1.1"
flask-login = "^0.5.0"
psutil = "^5.6.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.29.0"
pylint = "^2.4.4"

[tool.poetry.scripts]
private_pypi_run_server = "private_pypi.server:run_server_cli"
private_pypi_github_create_package_repo = "private_pypi.pkg_repos.github:github_create_package_repo_cli"
private_pypi_github_upload_package = "private_pypi.pkg_repos.github:github_upload_package_cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
