[tool.poetry]
name = "private-pypi-core"
version = "0.1.3-alpha.5"
description = "A private PyPI server powered by flexible backends."
license = "MIT"
authors = ["huntzhan <huntzhan.dev@gmail.com>"]
readme = "README.md"
repository = "https://github.com/private-pypi/private-pypi-core"
keywords = ["private", "pypi", "packaging", "dependency"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "private_pypi_core" },
    { include = "private_pypi_backends" },
    { include = "private_pypi_testkit" },
]

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.0"
filelock = "^3.0.12"
shortuuid = "^0.5.0"
fire = "^0.2.1"
Jinja2 = "^2.11.1"
flask = "^1.1.1"
flask-login = "^0.5.0"
psutil = "^5.6.7"
waitress = "^1.4.3"
Paste = "^3.4.0"
pydantic = "^1.4"
cryptography = "^2.8"
redis-server = "^5.0.7"
dramatiq = {extras = ["redis"], version = "^1.8.1"}
apscheduler = "^3.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.29.0"
pylint = "^2.4.4"
twine = "^3.1.1"

[tool.poetry.scripts]
private_pypi_server = "private_pypi_core.server:run_server_cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
